# oncosize

./: app.py  audio_processor.py  data_analyzer.py  database.py  lesion_grouper.py  openai_text_processor.py  pdf_processor.py  pyproject.toml  synthetic_data_generator.py  treatment_manager.py  utils.py  visualization.py
attached_assets/: Pasted-Voc-um-agente-encarregado-de-processar-uma-cole-o-de-laudos-m-dicos-em-PDF-de-um-paciente-oncol--1748725384278.txt
